# bsm-project

./: .env  .gitignore  Field Definitions.txt  Procfile  README.md  ReproductionGuide.md  bulk_import.py  commit_message.txt  local_history.patch  pyproject.toml  render.yaml
backend/: .env  add_user.py  app.py  app_with_health_check.py  bsm_project.db  config.py  fix_admin_password.py  models.py  pyproject.toml  requirements.txt  server.py  services.py  test_db_connection.py
backend/alembic/: env.py
backend/alembic/versions/: f20c4a9f4b46_initial_schema.py
backend/app/: auth.py  database.py  importer.py  main.py  models.py  schemas.py
backend/app/api/: auth.py  dashboard.py  data.py
backend/instance/: business_data.db
backend/routes/: analysis.py  auth.py  data_management.py
backend/tests/: test_data_management.py  test_sanity.py
demo/: README_部署说明.md  REPRODUCTION_GUIDE.md  STATISTICS_LOGIC_ANALYSIS.md  UPDATE_PLAN.md  auth.py  bulk_upload_client.py  business_data.db  clear_db.py  crud.py  database.py  deploy.bat  get_statistics.js  index.html  init_db.py  main.py  models.py  nginx.conf  prd.md  requirements.txt  schemas.py  services.py  services.py_tmp_func.txt  智融担保项目明细-电子版.xls  智融担保项目明细2025年3月.xls
docs/: NEW_DATABASE_SCHEMA_DETAIL.md
frontend/: package-lock.json  package.json
sample_data/: sample_data_2021-01.xlsx  sample_data_2021-02.xlsx  sample_data_2021-03.xlsx  sample_data_2021-04.xlsx  sample_data_2021-05.xlsx  sample_data_2021-06.xlsx  sample_data_2021-07.xlsx  sample_data_2021-08.xlsx  sample_data_2021-09.xlsx  sample_data_2021-10.xlsx  (+50 more)
(+74 files in other folders)
