[project]
name = "backend"
version = "0.1.0"
description = "Backend for bsm-project"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "alembic",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pandas",
    "openpyxl",
    "python-multipart",
    "fastapi-cors",
]
